--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "nyc": "^15.1.0",
     "ts-node": "^10.7.0",
     "tsc-watch": "^5.0.3",
-    "typedoc": "^0.22.15"
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.3"
   }
 }
+
