Prueba GitHub Actions

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "doc": "typedoc",
     "test": "mocha",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf .nyc_output",
+    "coverage": "nyc npm test && nyc report --reporter=lcov"
     "index": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "repository": {
