--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=ull-esit-inf-dsi-21-22-prct09-filesystem-notes-app-alu01013651
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=stc
+sonar.sources=src
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
