--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "doc": "typedoc",
     "test": "mocha",
     "coverage": "nyc npm test && nyc report --reporter=lcov",
-    "index": "tsc-watch --onSuccess \"node dist/index.js\""
+    "index": "tsc-watch --onSuccess \"node dist/index.js\"",
+    "note-app": "tsc-watch --onSuccess \"node dist/note-app.js\""
   },
   "repository": {
     "type": "git",
@@ -26,9 +27,12 @@
   "devDependencies": {
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.25",
+    "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
+    "chalk": "^4.1.2",
     "coveralls": "^3.1.1",
     "eslint": "^8.13.0",
     "eslint-config-google": "^0.14.0",
@@ -38,6 +42,8 @@
     "tsc-watch": "^5.0.3",
     "typedoc": "^0.22.15",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "yargs": "^17.4.1"
   }
 }
-
