--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "coverage": "nyc npm test && nyc report --reporter=lcov",
     "index": "tsc-watch --onSuccess \"node dist/index.js\"",
     "note-app": "tsc-watch --onSuccess \"node dist/note-app.js\"",
-    "mod9": "tsc-watch --onSuccess \"node dist/mod9/index.js\""
+    "mod9": "tsc-watch --onSuccess \"node dist/mod9/filterMapAddReduce.js\""
   },
   "repository": {
     "type": "git",
