--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,6 @@
 {
   "extension": ["ts"],
-  "spec": "test/**/*.spec.ts",
+  // "spec": "test/**/*.spec.ts",
+  "spec": "test/*spec.ts",
   "require": "ts-node/register"
 }
