--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,4 @@ sonar.sourceEncoding=UTF-8
 
 # Coverage info
 sonar.javascript.lcov.reportPath=coverage/lcov.info
+sonar.coverage.exclusions=src/note-app.ts
